Ensure adding the language version directive works for all the cases